# ipa

./: .cookiecutter.json  .gitignore  invoke.example.yml  invoke.mysql.yml  ipa_notes.txt  pyproject.toml  tasks.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: upstream_testing.yml
development/: Dockerfile  creds.example.env  nautobot_config.py  towncrier_template.j2
docs/admin/: compatibility_matrix.html  compatibility_matrix.md
docs/dev/: release_checklist.md
docs/dev/code_reference/: api.md  package.md
ipa/: __init__.py  filters.py  forms.py  navigation.py  urls.py
ipa/api/: serializers.py  urls.py
ipa/migrations/: 0001_initial.py
ipa/templates/ipa/: ipaexamplemodel_retrieve.html
ipa/tests/: fixtures.py  test_api.py  test_api_views.py  test_filter_ipaexamplemodel.py  test_views.py
nautobot-app-ipa/: .cookiecutter.json  .gitignore  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  poetry_log.txt  pyproject.toml  tasks.py
nautobot-app-ipa/.github/: CODEOWNERS
nautobot-app-ipa/.github/ISSUE_TEMPLATE/: feature_request.md
nautobot-app-ipa/.github/workflows/: ci.yml
nautobot-app-ipa/development/: Dockerfile  creds.example.env  docker-compose.base.yml  docker-compose.dev.yml  nautobot_config.py
nautobot-app-ipa/docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
nautobot-app-ipa/docs/admin/release_notes/: version_1.0.md
nautobot-app-ipa/docs/dev/: contributing.md  dev_environment.md
nautobot-app-ipa/extensions/: citrix_netsaler.py  mikrotik_router_os.py  test_netmiko_citrix.py
nautobot-app-ipa/ipa/: __init__.py  models.py  tables.py  views.py
nautobot-app-ipa/ipa/api/: __init__.py  views.py
nautobot-app-ipa/ipa/migrations/: 0001_initial.py
nautobot-app-ipa/ipa/tests/: __init__.py  test_form_ipaexamplemodel.py  test_model_ipaexamplemodel.py
nautobot-app-ipa/scripts/: netscaler_post.py
